Remove index, Add aux link

--- a/_config.yml
+++ b/_config.yml
@@ -11,5 +11,7 @@ search:
 aux_links:
   "GitHub":
     - "https://github.com/nextum/nextum.github.io"
+  "Abbreviations":
+    - "https://nextum.github.io/abbreviations.html"
   "Issues":
   - "https://github.com/nextum/nextum.github.io/issues"
